ios ui fixes
